# wyrm

./: .gitignore  Cargo.toml  README.md  arcane_knowledge.md  build.rs  create_disassembly_data.py  instr_parser.json  instr_table.json  num_converter.py  ops.pkl  shared.py  theoretical_parser.md  wasm_disassembly.py
notes/: arcane_knowledge.md  disassembly.md  representing_analysis.md  stack_decompilation.md
src/: file_reader.rs  instr_table.rs  main.rs  pipeline.rs  usdm.rs  wasm_model.rs  wasm_parser.rs  wat_emitter.rs
src/parser/: draw.rs  mod.rs  prs.rs
