[package]
name = "wyrm"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
serde_json = "1.0"

[dependencies]
dot2 = "1.0.0"
log = { version = "0.4.22", features = ["max_level_debug", "release_max_level_warn"] }
simple_logger = "5.0.0"
